# fasta2tfasta

./: .gitignore  AUTHORS  CDataSequenceIndex.cpp  CDataSequenceIndex.h  CFastaInfo.cpp  CFastaInfo.h  CMemoryMappedFile.cpp  CMemoryMappedFile.h  CProgress.cpp  CProgress.h  CTFastaInfo.cpp  CTFastaInfo.h  INSTALL  NEWS  README  TEST.txt  config.status  configure  configure.ac  main.cpp  makefile  makefile.am  makefile.in  run.sh
autom4te.cache/: output.0  traces.0  traces.1
data/: gorilla.fas
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml
