AC_PREREQ([2.69])                                                               # Ensure that the autoconf tool version is at least the indicated one.
AC_INIT([fasta2tfasta], [0.1], [joan.jene@cragenomica.es])                      # Package, version and bug report to.
AC_CONFIG_SRCDIR([main.cpp])                                                    # Indicate autoconf one file to ensure that the path is correct.
AM_INIT_AUTOMAKE
AC_PROG_CXX
AC_CONFIG_FILES([makefile])
AC_OUTPUT

